// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <PrimeraApp/> Debe de mostrar <PrimeraApp /> correctamente 1`] = `
<Fragment>
  <h1>
     
    hola tu de yo
  </h1>
  <p>
    Soy un subtitulo enviado por props
  </p>
</Fragment>
`;

exports[`Pruebas en <PrimeraApp/> Debe de mostrar el subtitulo enviado por props 1`] = `
<Fragment>
  <h1>
     
    hola tu de yo
  </h1>
  <p>
    Soy un subtitulo props
  </p>
</Fragment>
`;
